Deploy container image to AWS Lambda